apps/zulip/zulip-deploy.yaml
---
apiVersion: apps/v1
kind: Deployment
metadata:
  labels:
    app: zulip
    component: zulip
  name: zulip
  namespace: zulip
spec:
  replicas: 1
  selector:
    matchLabels:
      app: zulip
      component: zulip
  template:
    metadata:
      labels:
        app: zulip
        component: zulip
    spec:
      containers:
      - env:
        # Datastores
        - name: DB_HOST
          value: zulip-postgres
        - name: DB_HOST_PORT
          value: "5432"
        - name: DB_USER
          value: zulip
        - name: SETTING_MEMCACHED_LOCATION
          value: zulip-mem-memcached:11211
        - name: SETTING_REDIS_HOST
          value: zulip-redis
        - name: SETTING_RABBITMQ_HOST
          value: zulip-rabbitmq
        # Email/Domain/Notification
        - name: SETTING_EMAIL_HOST
          value: fake-smtp.fake-smtp.svc.cluster.local
        - name: SETTING_EMAIL_USE_TLS
          value: "False"
        - name: SETTING_EMAIL_PORT
          value: "10025"
        - name: SETTING_EMAIL_HOST_USER
        - name: SETTING_NOREPLY_EMAIL_ADDRESS
          value: zulip-noreply@domain.tld
        - name: SETTING_TOKENIZED_NOREPLY_EMAIL_ADDRESS
          value: zulip-noreply-{token}@domain.tld
        - name: ZULIP_AUTH_BACKENDS
          value: EmailAuthBackend
        - name: SETTING_MAX_FILE_UPLOAD_SIZE
          value: "25"
        - name: SETTING_SUBMIT_USAGE_STATISTICS
          value: "False"
        - name: SETTING_PUSH_NOTIFICATION_BOUNCER_URL
          value: https://push.zulipchat.com
        - name: PUSH_NOTIFICATION_BOUNCER_URL
          value: https://push.zulipchat.com
        - name: ZULIP_USER_DOMAIN
          value: domain.tld
        # SSL
        - name: DISABLE_HTTPS
          value: "True"
        - name: SSL_CERTIFICATE_GENERATION
          value: self-signed
        image: zulip/docker-zulip:4.7-0
        imagePullPolicy: IfNotPresent
        name: zulip
        ports:
        - containerPort: 80
          name: http
          protocol: TCP
        - containerPort: 443
          name: https
          protocol: TCP
        resources:
          requests:
            cpu: "2.5"
            memory: 4Gi
        volumeMounts:
        - mountPath: /data
          name: data
      volumes:
      - name: data
        persistentVolumeClaim:
          claimName: zulip-data
---
apiVersion: v1
kind: Service
metadata:
  name: zulip
  namespace: zulip
  labels:
    app: zulip
    component: zulip
spec:
  selector:
    app: zulip
    component: zulip
  ports:
  - name: http
    port: 80
    targetPort: 80
    protocol: TCP
...
