apps/zulip/zulip-postgresql.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zulip-postgres
  namespace: zulip
spec:
  selector:
    matchLabels:
      app: zulip
      component: postgres
  serviceName: postgres
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "9187"
      labels:
        app: zulip
        component: postgres
    spec:
      containers:
      - name: postgresql
        image: docker.io/zulip/zulip-postgresql
        resources:
          requests:
            memory: 256M
          limits:
            memory: 1G
        ports:
        - name: postgresql
          containerPort: 5432
          protocol: TCP
        volumeMounts:
          - name: postgres-data
            mountPath: /var/lib/postgresql/data
      - name: exporter
        image: quay.io/prometheuscommunity/postgres-exporter
        resources:
          requests:
            cpu: 100m
            memory: 100Mi
          limits:
            cpu: 300m
            memory: 300Mi
        ports:
        - containerPort: 9187
          name: metrics
  volumeClaimTemplates:
  - metadata:
      name: postgres-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: nfs-sc
      resources:
        requests:
          storage: 5Gi
---
apiVersion: v1
kind: Service
metadata:
  name: zulip-postgres
  namespace: zulip
spec:
  selector:
    app: zulip
    component: postgres
  ports:
    - protocol: TCP
      port: 5432
      targetPort: 5432
      name: postgres
    - protocol: TCP
      port: 9187
      targetPort: 9187
      name: metrics
...
