apps/zulip/zulip-rabbitmq-nohelm.yaml
---
apiVersion: apps/v1
kind: StatefulSet
metadata:
  name: zulip-rabbitmq
  namespace: zulip
spec:
  selector:
    matchLabels:
      app: zulip
      component: rabbitmq
  serviceName: rabbitmq
  replicas: 1
  template:
    metadata:
      annotations:
        prometheus.io/scrape: "true"
        prometheus.io/port: "15692"
      labels:
        app: zulip
        component: rabbitmq
    spec:
      containers:
        - name: rabbitmq
          image: docker.io/rabbitmq:3
          readinessProbe:
            exec:
              command:
                - runuser
                - rabbitmq
                - -c
                - 'rabbitmq-diagnostics -q check_running'
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          livenessProbe:
            exec:
              command:
                - runuser
                - rabbitmq
                - -c
                - 'rabbitmq-diagnostics -q ping'
            initialDelaySeconds: 120
            periodSeconds: 30
            timeoutSeconds: 10
            successThreshold: 1
            failureThreshold: 3
          ports:
          - containerPort: 5672
            name: rabbitmq
          resources:
            requests:
              cpu: 200m
              memory: 1024Mi
            limits:
              cpu: 500m
              memory: 1024Mi
          volumeMounts:
          - mountPath: /var/lib/rabbitmq
            name: rabbitmq-data
          - mountPath: /etc/rabbitmq/conf.d/11-memory.conf
            subPath: 11-memory.conf
            name: rabbitmq-config-memory
      volumes:
        - name: rabbitmq-config-memory
          configMap:
            name: zulip-rabbitmq-memory
  volumeClaimTemplates:
  - metadata:
      name: rabbitmq-data
    spec:
      accessModes: [ "ReadWriteOnce" ]
      storageClassName: nfs-sc
      resources:
        requests:
          storage: 3Gi
---
apiVersion: v1
kind: Service
metadata:
  name: zulip-rabbitmq
  namespace: zulip
spec:
  selector:
    app: zulip
    component: rabbitmq
  ports:
    - protocol: TCP
      port: 5672
      targetPort: 5672
      name: rabbitmq
    - protocol: TCP
      port: 15692
      targetPort: 15692
      name: metrics
